# power-grid-bridge

./: README.md  publish.bat  pyproject.toml  set_pypi_version.py  setup.py  uv.lock.license
.github/: dco.yml
src/power_grid_bridge/: __init__.py
src/power_grid_bridge/_dispatcher/: __init__.py  converter_dispatch.py
src/power_grid_bridge/api/: base_converter.py
src/power_grid_bridge/enum/: platform_enum.py
src/power_grid_bridge/errors/: api_errors.py  base_errors.py
