# SPDX-FileCopyrightText: 2026 Engr. Ahmad Furqan <ahmadfurqanc@gmail.com>
#
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = [
    "setuptools", 
    "wheel",
    "requests",
]
build-backend = "setuptools.build_meta"

[project]
name = "power-grid-bridge"
authors = [{name = "Engr. Ahmad Furqan", email = "ahmadfurqanc@gmail.com"}]
description = "Power Grid Bridge"
readme = "README.md"
keywords = ["power grid bridge", "power system", "conversions"]
license = {text = "MPL-2.0"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
]
dynamic = ["version"]

[dependency-groups]

test = [
    "pytest",
    "pytest-cov",
    "pydantic>2", # Used in unit tests
]

lint = [
    "pre-commit",
    "ruff",
    "mypy",
    "numpy", # needed for mypy
    "types-pyyaml", # needed for mypy
    "types-requests", # needed for mypy
]

dev = [{ include-group = "test" }, { include-group = "lint" }]

examples = [
    "pandapower",
]

[project.urls]
GitHub = "https://github.com/furqan463/power-grid-bridge"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {file = "PYPI_VERSION"}

[tool.setuptools.package-data]
power_grid_bridge = ["config/**/*.yaml", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/validation"]
addopts = [
    "--cov=power_grid_bridge",
    "--cov-report=term",
    "--cov-report=html:cov_html",
    "--cov-report=xml:python_coverage.xml",
#    "--cov-fail-under=90.0",
]
xfail_strict = true

[tool.ruff]
line-length = 120
indent-width = 4
show-fixes = true

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    "SIM",
    "YTT",
    "BLE",
    "PERF",
    "Q",
    "ICN",
    "ISC",
    "G",
    "LOG",
    "EXE",
    "FA",
    "FURB",
    "FLY",
    "SLOT",
    # pylint
    "PL",
    # Numpy-specific rules
    "NPY",
    # Warning
    "W",
    # use pathlib
    "PTH",
    # tidy imports
    "TID",
    # unused arguments
    "ARG",
    # Return
    "RET",
    # pie
    "PIE",
    # self
    "SLF",
    # pyupgrade
    "UP",
    # raise
    "RSE",
    # ruff sepcific rules
    "RUF",
    # bandit
    "S",
    # boolean positional value in call
    "FBT003",
    # raise vanilla args
    "TRY002",
    # pytest-style
    "PT",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "SLF001"] # assert statements are used in tests, magic numbers allowed in tests

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
non_interactive = true
install_types = true
